fix: specify series title in pagination

--- a/src/pages/series/[series]/[...page].astro
+++ b/src/pages/series/[series]/[...page].astro
@@ -39,13 +39,13 @@ const paginationProps = {
 	...(page.url.prev && {
 		prevUrl: {
 			url: page.url.prev,
-			text: `← Previous Series`,
+			text: `← Previous in ${series}`,
 		},
 	}),
 	...(page.url.next && {
 		nextUrl: {
 			url: page.url.next,
-			text: `Next Series →`,
+			text: `Next in ${series} →`,
 		},
 	}),
 };
