translate home and about pages

--- a/src/pages/en/about.astro
+++ b/src/pages/en/about.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '../layouts/Base.astro';
+import Layout from "@/layouts/Base";
 ---
 
 <Layout
@@ -9,23 +9,23 @@ import Layout from '../layouts/Base.astro';
 >
 	<h1 class="title">About</h1>
 	<p>
-		Hi, I'm a Astro theme. I'm particularly great for starting a blog or a 
-		portfolio. 
+		Hi, I'm a Astro theme. I'm particularly great for starting a blog or a
+		portfolio.
 		<div>
 			I was based on two other themes:
-			<a 
-				class="cody-link" 
+			<a
+				class="cody-link"
 				href="https://astro-theme-cactus.netlify.app"
 				target="_blank"
-				rel="noopener noreferrer"
-			>Astro Cactus</a>
+				rel="noopener noreferrer">Astro Cactus</a
+			>
 			and
-			<a 
-				class="cody-link" 
+			<a
+				class="cody-link"
 				target="_blank"
 				rel="noopener noreferrer"
-				href="https://risotto.joeroe.io"
-			>Risotto</a>.
+				href="https://risotto.joeroe.io">Risotto</a
+			>.
 		</div>
 	</p>
 
@@ -39,7 +39,7 @@ import Layout from '../layouts/Base.astro';
 		<li>Pin posts and projects</li>
 	</ul>
 	<p class="mt-4">
-		Clone or fork my 
+		Clone or fork my
 		<a
 			class="cody-link inline-block"
 			href="https://github.com/kirontoo/astro-theme-cody"
@@ -52,4 +52,3 @@ import Layout from '../layouts/Base.astro';
 		if you like me!
 	</p>
 </Layout>
-
