--- a/src/components/SelectLanguage.astro
+++ b/src/components/SelectLanguage.astro
@@ -6,17 +6,25 @@ import {
     type SupportedLanguage,
 } from "src/utils/i18n";
 
+const { class: className } = Astro.props;
+
 let currentLanguage = getLangFromUrl(Astro.url);
 ---
 
 <lang-select>
     <label>
         <span class="sr-only">Select Language</span>
-        <select name="languages" id="lang-select" value={currentLanguage}>
+        <select
+            name="languages"
+            id="lang-select"
+            value={currentLanguage}
+            class:list={[className]}
+        >
             {
                 getSupportedLanguages().map((lang: string) => {
                     return (
                         <option
+                            class="outline-none"
                             value={getLocalizedUrl(
                                 Astro.url,
                                 lang as SupportedLanguage,
@@ -48,3 +56,9 @@ let currentLanguage = getLangFromUrl(Astro.url);
 
     customElements.define("lang-select", LangSelect);
 </script>
+
+<style>
+    select {
+        @apply bg-bgColor border-b border-accent focus:border-accent focus:border;
+    }
+</style>
