add margin to language select component

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -70,7 +70,7 @@ const t = useTranslations(lang);
 	</nav>
 
 	<div class="flex gap-2 items-center justify-center">
-		<SelectLanguage />
+		<SelectLanguage class="sm:mr-2" />
 		<ThemeToggle />
 
 		<nav-button>
