--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,8 +1,8 @@
 ---
 // Import the global.css file here so that it is included on
 // all pages through the use of the <BaseHead /> component.
-import '../styles/global.css';
-import { siteConfig } from '../consts.ts';
+import "@/styles/global";
+import { siteConfig } from "../consts.ts";
 
 interface Props {
 	title: string;
@@ -13,7 +13,12 @@ interface Props {
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const { title, description, articleDate, image = '/blog-placeholder-1.jpg' } = Astro.props;
+const {
+	title,
+	description,
+	articleDate,
+	image = "/blog-placeholder-1.jpg",
+} = Astro.props;
 const titleSeparator = "|";
 const siteTitle = `${title} ${titleSeparator} ${siteConfig.title}`;
 ---
@@ -25,9 +30,12 @@ const siteTitle = `${title} ${titleSeparator} ${siteConfig.title}`;
 <meta name="generator" content={Astro.generator} />
 
 <!-- Font preloads -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+	href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+	rel="stylesheet"
+/>
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
@@ -47,7 +55,10 @@ const siteTitle = `${title} ${titleSeparator} ${siteConfig.title}`;
 {
 	articleDate && (
 		<>
-			<meta property="article:author" content={siteConfig.profile.author} />
+			<meta
+				property="article:author"
+				content={siteConfig.profile.author}
+			/>
 			<meta property="article:published_time" content={articleDate} />
 		</>
 	)
