--- a/src/pages/[lang]/blog/[slug].astro
+++ b/src/pages/[lang]/blog/[slug].astro
@@ -1,16 +1,16 @@
 ---
 import type { InferGetStaticPropsType, GetStaticPaths } from "astro";
 import BlogPost from "@/layouts/BlogPost";
-import { getAllPosts, getSlugFromPost } from "@/utils";
-import { getLangFromSlug, getSupportedLanguages } from "src/utils/i18n";
+import { filterByLanguage, getAllPosts, getSlugFromPost } from "@/utils";
+import { getSupportedLanguages, type SupportedLanguage } from "src/utils/i18n";
 
 export const getStaticPaths = (async () => {
 	const blogEntries = await getAllPosts();
 	return getSupportedLanguages().flatMap((lang) => {
-		const filteredByLanguage = blogEntries.filter((post) => {
-			const postLang = getLangFromSlug(post.slug);
-			return postLang === lang;
-		});
+		const filteredByLanguage = filterByLanguage(
+			blogEntries,
+			lang as SupportedLanguage,
+		);
 
 		return filteredByLanguage.map((post) => {
 			const slug = getSlugFromPost(post);
