--- a/src/pages/[lang]/series/[series]/[...page].astro
+++ b/src/pages/[lang]/series/[series]/[...page].astro
@@ -2,7 +2,7 @@
 import type { Page, GetStaticPaths } from "astro";
 import type { CollectionEntry } from "astro:content";
 import BaseLayout from "@/layouts/Base";
-import { getAllPosts, getUniqueByProperty, sortMDByDate, getPostsBySeries } from "@/utils";
+import { getAllPosts, getUniqueByProperty, sortMDByDate, getPostsBySeries, getSupportedLanguages, filterByLanguage, type SupportedLanguage } from "@/utils";
 import PostPreview from '@/components/blog/PostPreviewA';
 // Alternative post item
 // import PostPreview from '@/components/blog/PostPreviewB';
@@ -12,15 +12,19 @@ import Pagination from '@/components/Pagination';
 export const getStaticPaths: GetStaticPaths = async ({ paginate }) => {
 	const allPosts = await getAllPosts();
 	const allPostsByDate = sortMDByDate(allPosts, "ascending");
-	const  uniqueSeries = getUniqueByProperty("series", allPostsByDate);
+	const uniqueSeries = getUniqueByProperty("series", allPostsByDate);
 
-	return uniqueSeries.flatMap((series) => {
-		const filteredPosts = getPostsBySeries(series, allPostsByDate);
-		return paginate(filteredPosts, {
-			params: { series },
-			pageSize: 10,
-		});
-	});
+  return getSupportedLanguages().flatMap((lang) => {
+    return uniqueSeries.flatMap((series) => {
+      const postsFilteredBySeries = getPostsBySeries(series, allPostsByDate);
+      const postsFilteredByLang = filterByLanguage(postsFilteredBySeries, lang as SupportedLanguage);
+      return paginate(postsFilteredByLang, {
+        params: { lang, series },
+        pageSize: 10,
+      });
+    });
+  })
+
 };
 
 interface Props {
