--- a/src/pages/[lang]/tags/[tag]/[...page].astro
+++ b/src/pages/[lang]/tags/[tag]/[...page].astro
@@ -14,13 +14,17 @@ export const getStaticPaths: GetStaticPaths = async ({ paginate }) => {
 	const allPostsByDate = sortMDByDate(allPosts);
 	const uniqueTags = getUniqueTags(allPostsByDate);
 
-	return uniqueTags.flatMap((tag) => {
-		const filteredPosts = getPostsByTag(tag, allPostsByDate);
-		return paginate(filteredPosts, {
-			params: { tag },
-			pageSize: 10,
-		});
-	});
+  return getSupportedLanguages().flatMap((lang) => {
+    return uniqueTags.flatMap((tag) => {
+      const postsFilteredByTag = getPostsByTag(tag, allPostsByDate);
+      const postsFilteredByLang = filterByLanguage(postsFilteredByTag, lang as SupportedLanguage);
+      return paginate(postsFilteredByLang, {
+        params: { lang, tag },
+        pageSize: 10,
+      });
+    });
+  })
+
 };
 
 interface Props {
