--- a/src/pages/[lang]/archive/index.astro
+++ b/src/pages/[lang]/archive/index.astro
@@ -78,7 +78,7 @@ const dateFormat = {
 								dateTimeOptions={dateFormat.options}
 								locale={dateFormat.locale}
 							/>
-							<a class="cody-link" href={`/blog/${p.slug}`}>
+							<a class="cody-link" href={`/${lang}/blog/${p.slug}`}>
 								{p.data.title}
 							</a>
 						</li>
