add missing nav translation for tags and series

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -57,14 +57,14 @@ const t = useNavTranslations(lang);
 				href="/tags"
 				title="tags"
 				aria-current={url.pathname === "tags" ? "page" : false}
-				data-astro-prefetch>Tags</HeaderLink
+				data-astro-prefetch>{t("tags").text}</HeaderLink
 			>
 			<HeaderLink
 				class="sm:hidden block py-2 sm:py-0"
 				href="/series"
 				title="series"
 				aria-current={url.pathname === "series" ? "page" : false}
-				data-astro-prefetch>Series</HeaderLink
+				data-astro-prefetch>{t("series").text}</HeaderLink
 			>
 		</div>
 	</nav>
